--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
 /* --------------------------
@@ -75,17 +76,16 @@ Poster
 
 .blogs{
     margin-top: 70px;
-    width: 50%;
+    width: 0;
     margin-bottom: 100px;
 }
 ._blog{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 27px;
-    grid-column-gap: 30px;
 }
 .blog_details {
-    margin-left: 40px;
+    margin-left: 55px;
     background: #fff;
     padding: 11px;
     box-shadow:  0px 0px 26px -10px gray;
@@ -106,6 +106,102 @@ Poster
 }
 
 
+
+
+
+
+.contact{
+    position: relative;
+    min-height: 100vh;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image:url(images/back.jpg) ;
+    background-size: cover;
+}
+.contact .content{
+    max-width: 800px;
+    text-align: center;
+}
+.contact .content h1{
+    font-size: 36px;
+    font-weight: 500;
+    color: #fff;
+}
+.contact .content P{
+    font-weight: 300;
+    color: #fff;
+}
+.container{
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+.conatainer .contactinfo{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+.container .contactinfo .box{
+    position: relative;
+    padding:20px 0;
+    display: flex;
+}
+.container .contactinfo .box .icon{
+    min-width:40px;
+    height: 40px;
+    background: olive;
+    border-radius: 2px;
+}
+.container .contactinfo .box .text{
+    display: flex;
+    margin-left: 10px;
+    font-size: 20px;
+    color: #fff;
+    flex-direction: column;
+    font-weight: 300;
+}
+.container .contactinfo .box .text h3{
+    font-weight: 300;
+    color: #00bcd4;
+}
+.contactform{
+    width: 50%;
+    padding: 70px;
+    background: #333;
+}
+.contactform h2{
+    font-size: 40px;
+    color: #fff;
+}
+.contactform .inputbox{
+    position: relative;
+    width: 100%;
+    margin-top: 30px;
+}
+.contactform .inputbox input, .contactform .inputbox textarea{
+    width: 100%;
+    padding: 5px 0;
+    margin: 10px 0;
+    border: none;
+    border-bottom: 2px solid #333;
+    outine: none;
+    resize: none;
+}
+
+
+
+
+
+
+
+
+
+
 /*-- ---------------------------------
 
           footer-section 
@@ -121,8 +217,8 @@ Poster
     font-size: 30px;
     color:#969BAB;
     padding: 5px;
-    height: 32;
-    width: 32;
+    height: 32px;
+    width: 32px;
   }
 
 
