--- a/style.css
+++ b/style.css
@@ -136,25 +136,11 @@ Contuct Us
     font-weight: 500;
     color: #fff;
 }
-.contact .content P{
-    font-weight: 300;
-    color: #fff;
-}
-.conatainer .contactinfo{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-}
-.container .contactinfo .box{
-    position: relative;
-    padding:20px 0;
-    display: flex;
-}
 .container .contactinfo .box .icon{
     min-width:40px;
     height: 40px;
+    font-size: 30px;
     background: olive;
-    border-radius: 2px;
 }
 .container .contactinfo .box .text{
     display: flex;
@@ -162,30 +148,26 @@ Contuct Us
     font-size: 20px;
     color: #fff;
     flex-direction: column;
-    font-weight: 300;
 }
 .container .contactinfo .box .text h3{
-    font-weight: 300;
     color: #00bcd4;
 }
 .contactform{
-    width: 50%;
     padding: 70px;
 }
 .contactform h2{
     font-size: 40px;
-    color: #fff;
+    color: rgb(87, 7, 7);
 }
 .contactform .inputbox{
-    position: relative;
-    width: 100%;
-    margin-top: 30px;
+    postion: relative;
+    margin-top: 20px;
+}
+.button {
+    font-size: 40px;
 }
 .button:hover{
     background-color: orange;
-    font-size: 40px;
-}
-.button {
     font-size: 40px;
 }
 .contactform .inputbox input, .contactform .inputbox textarea{
@@ -214,8 +196,7 @@ Contuct Us
     height: 32px;
     width: 32px;
   }
-
-
-
-
+  .footer_col_2 i:hover{
+      color: blueviolet;
+  }
 
